css/projects.css
body {
  background-color: #f7f3ee;
}

#hamburger-nav {
  background: #6d90d6;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  padding: 40px;

}

#hamburger-links {
  display: flex;
}

#hamburger-links a {
  flex-grow: 1;
  flex-direction: row;
  margin: 0 40px;
  color: white;
  font-family: 'Montserrat', sans-serif;
  font-weight: 500;
  text-decoration: none;
  text-align: center;
  font-size: 1.3em;
  z-index: 999;
}

#hamburger-links a:hover {
  transform: scale(1.2);
}

#hamburger-nav label,
#hamburger {
  display: none;
}

.dropdown-toggle {
  padding: 0;
}

.dropdown-toggle:hover {
  border: none;
}

.dropdown-toggle:focus {
  border: none;
}



#card-container {
  margin: 30px 10px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
}

.card {
  margin: 1em;
  border: rgba(151, 69, 63, 0.6) 3px solid;
  height: 35em;
}

.card-body {
  background-color: #f8f5f3;
}

.card-title {
  color: #00473e;
  text-align: center;
  font-family: 'Montserrat', sans-serif;

}

.card-text {
  text-align: center;
  font-family: 'Montserrat', sans-serif;
  font-size: 1em;
}

.btn-primary {
  background-color: #f86e64;
  transform: translateX(50%);
  font-family: 'Montserrat', sans-serif;
  border: 1px solid #c2c2c2;
  transition-duration: .4s;
}

.btn-primary:hover {
  background-color: #f79b95;
  color: #702721;
}

.btn-secondary {
  background-color: #faae2b;
  transform: translateX(50%);
  font-family: 'Montserrat', sans-serif;
  border: 1px solid #c2c2c2;
  transition-duration: .4s;
}

.btn-secondary:hover {
  background-color: #f5c572;
  color: #7c5002;
}



.skills-text {
  text-align: center;
  font-family: 'Montserrat', sans-serif;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  color: #525252;
  margin: 20px 0 0 0;
}

.soft {
  font-family: 'Montserrat', sans-serif;
  font-size: 2em;
  color:rgba(253, 251, 248, 0.95);
  text-align: center;
}

.skills-text p {
  font-size: 1.1em;
}

.toolbox {
  background-image: url("/./../assets/work-bg.png");
  background-size: cover;
  height: 130vh;
}

.work-bg {
  z-index: -1;
  display: flex;
  width: 100%;
}

.section-2 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 70%;
}

.icons-text-div {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;

}

.icon-container {
  margin: 10px 0 0 0;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: flex-start;
  width: 100%;
  /* align-items: flex-end; */
}

.box-icon {
  margin: 5px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 20%;
  height: 150px;
  font-size: 3em;
  color: #f7f3ee;
}

.box-icon p {
  font-family: 'Montserrat', sans-serif;
  font-size: 17px;
  color: #f7f3ee;
  display: flex;
  margin-top: .5em;
}


@media screen and (max-width: 820px) {
  #hamburger-nav {
    width: 100vw;
    display: flex;
  }


  #hamburger-links a {
    box-sizing: border-box;
    display: block;
    width: 100%;

  }

  #hamburger-nav label {
    display: inline-block;
    color: white;
    background: #6d90d6;
    font-style: normal;
    font-size: 1.7em;
    padding: 10px;
    width: 100vw;
  }

  #hamburger-links {
    display: none;
  }

  #hamburger-nav input:checked~#hamburger-links {
    display: block;
  }


  #card-container {
    margin: 30px 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
  }
  
  .card {
    margin: 1em;
    border: rgba(151, 69, 63, 0.6) 3px solid;
  }
  
  .card-body {
    background-color: #f8f5f3;
  }
  
  .card-title {
    color: #00473e;
    text-align: center;
    font-family: 'Montserrat', sans-serif;
  
  }
  
  .card-text {
    text-align: center;
    font-family: 'Montserrat', sans-serif;
    font-size: 1em;
  }
  

  
  .soft {
    font-family: 'Montserrat', sans-serif;
    font-size: 2em;
    color:rgba(253, 251, 248, 0.95);
    text-align: center;
  }
  
  .skills-text p {
    font-size: 1.1em;
  }
  
  .toolbox {
    background-image: url("/./../assets/work-bg.png");
    background-size: cover;
    height: 100vh;
  }
  
  .work-bg {
    z-index: -1;
    display: flex;
    width: 100%;
  }
  
  .section-2 {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    height: 60%;
  }
  
  .icons-text-div {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  
  }
  
  .icon-container {
    margin: 10px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    width: 90%;
    /* align-items: flex-end; */
  }
  
  .box-icon {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 150px;
    font-size: 2em;
    margin: .1em .2em;
    color: #f7f3ee;
  }
  
  
  

}

